<resources>
    <string name="app_name">GradsHub</string>

    <!-- main menu string values -->
    <string name="logout">Logout</string>


    <!-- THE FOLLOWING BELONG TO THE AUTHENTICATION ACTIVITY -->
    <!-- attributes for fragment_login -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">login</string>
    <string name="forgot_password_button">forgot password?</string>
    <string name="no_account_tv">No account? click below</string>
    <string name="register_button">register</string>

    <!-- attributes for fragment_register -->
    <string name="firstName_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>
    <string name="register_email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="academic_status_tv">Academic Status:</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint"> Re-enter password</string>
    <string name="submit_button">Submit</string>

    <string-array name="ACADEMIC_STATUS">
        <item>Select your academic status here</item>
        <item>Honours</item>
        <item>Masters</item>
        <item>PhD</item>
    </string-array>

    <string name="status_hint">Select your academic status here</string>
    <string name="status_error">please select valid academic status</string>


    <!-- attributes for fragment_reset_password-->
    <string name="password_reset_request_tv">Enter your email address to request for password reset</string>
    <string name="email_address_hint">Email</string>
    <string name="send_request">SEND REQUEST</string>


    <!-- THE FOLLOWING BELONG TO THE MAIN ACTIVITY -->
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- these items appear on the navigation header -->
    <string name="nav_header_title">GradsHub</string>
    <string name="nav_header_subtitle">user\'s name here</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- for items on the overflow menu or on the action bar space if they're top priority items -->
    <string name="action_settings">Settings</string>

    <!-- attributes for fragment_my_groups -->
    <string name="enter_group_name">Enter group name</string>
    <string name="select_group_visibility">Select group visibility</string>
    <string name="public_radio_button">public</string>
    <string name="private_radio_button">private</string>
    <string name="done_button">DONE</string>

    <!-- for menu items on the navigation drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_myGroups">My Groups</string>
    <string name="menu_createGroup">Create Group</string>
    <string name="menu_exploreGroup">Search Groups</string>

    <!-- button that appears in the recycler view in my groups page -->
    <string name="see_available_groups">see available groups</string>


    <!-- these are attributes that belong to the dialog private group xml file -->
    <string name="alert_dialog_title">Private Group</string>
    <string name="alert_dialog_message">You need an invite code to join this group, please enter the code below and click CONFIRM to continue or CANCEL to withdraw.</string>
    <string name="alert_dialog_hint">Enter invite code</string>

    <!-- these are attributes belong to fragment_explore_groups_item xml file -->
    <string name="join_button">JOIN GROUP</string>

    <!-- these are attributes belong to fragment_create_post xml file -->
    <string name="post_title">Title</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="post_hint">add link and/or attach a pdf file</string>

    <!-- string values for UserProfileFragment -->
    <string name="user_profile_name">USERNAME</string>
    <string name="chat_button_text">START CHAT</string>
    <string name="block_button_text">BLOCK</string>
    <string name="unblock_button_text">UN-BLOCK</string>
    <string name="friend_button_text">ADD FRIEND</string>
    <string name="unfriend_button_text">REMOVE FRIEND</string>

</resources>
