<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_group"
    tools:context=".groups.creategroup.CreateGroupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/groupNameContainer"
            android:layout_width="353dp"
            android:layout_height="96dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="@+id/progress_circular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/groupNameET"
                android:layout_width="398dp"
                android:layout_height="57dp"
                android:hint="@string/enter_group_name" />
            <!--android:maxLength="50"-->
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/groupVisibilityTV"
            android:layout_width="186dp"
            android:layout_height="63dp"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:paddingStart="32dp"
            android:paddingLeft="32dp"
            android:text="@string/select_group_visibility"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupNameContainer"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="154dp"
            android:layout_height="27dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="81dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/groupVisibilityTV"
            app:layout_constraintTop_toBottomOf="@+id/groupNameContainer"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/publicRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_radio_button" />

            <RadioButton
                android:id="@+id/privateRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_radio_button" />
        </RadioGroup>

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/register_rounded_button"
            android:gravity="center"
            android:text="@string/done_button"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.635" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.398" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>