...
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/usersList"
            android:name="com.example.gradshub.AvailableGroupsListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layoutManager="LinearLayoutManager"
...
