...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/biza_unset"
    tools:context=".Login">

    <EditText
        android:id="@+id/emailET"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="228dp"
        android:drawableStart="@mipmap/profile"
        android:drawableLeft="@mipmap/profile"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@mipmap/lock"
        android:ems="10"
        android:hint="Password"
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
...
