...
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:errorTextAppearance="@color/colorRed" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postSubjectET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="type title" />
    </com.google.android.material.textfield.TextInputLayout>


...
        android:layout_margin="16dp"
        android:text="Description"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/postDescriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="textMultiLine"
        android:layout_below="@id/descriptionTV"
        android:linksClickable="true"
...
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>


    <Button
        android:id="@+id/postBtn"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/postDescriptionET"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
...
